# FastAPI-Starter-Kit

./: .env  .env-template  .env.test-template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.en.markdown  README.md  README.ru.markdown  README.ru.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: config.py
app/api/v1/: routes.py
app/auth/: dependencies.py  token.py
app/config/: settings.py
app/core/: db_manager.py
app/core/models/: base.py  user.py
app/core/schemas/: __init__.py  token.py  user.py
app/exceptions/: auth.py  users.py
app/repository/: abstract.py  base.py  user.py
app/utils/: case_converter.py  constants.py  logger.py  types.py
fastapi-app/: .env  .env-template  alembic.ini  main.py
fastapi-app/alembic/: env.py
fastapi-app/api/: __init__.py
fastapi-app/api/api_v1/: __init__.py  users.py
fastapi-app/config/: settings.py
fastapi-app/core/: db_manager.py
fastapi-app/exceptions/: users.py
fastapi-app/services/: abstract.py  user.py
fastapi-app/utils/: case_converter.py  types.py
migrations/: env.py
migrations/versions/: 2025_05_20_1432-2b9d3c6568a4_create_tables.py  2025_05_21_2006-9c85f9faafce_init.py  2025_05_23_2058-19d052663936_init_migration.py
scripts/: prestart-migrations.sh  startup-gunicorn  startup.sh
secrets/: jwt-private.pem  jwt-public.pem
src/: config.py  main.py
src/core/: db_manager.py
src/exceptions/: users.py
src/repository/: abstract.py  user.py
src/utils/: logger.py  types.py
tests/: config.py  conftest.py
tests/integration_tests/: conftest.py
(+19 files in other folders)
